--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
     "declarationMap": true,
     "outDir": "./dist",
     "rootDir": "./src",
+    "baseUrl": ".",
+    "paths": {
+      "@/lib/db": ["./node_modules/@hit/feature-pack-stubs/dist/db"],
+      "@/lib/hit-config.generated": ["./node_modules/@hit/feature-pack-stubs/dist/hit-config"]
+    },
     "types": [
       "node"
     ]
