feat: add UI specs list and detail pages for debugging
Introduced two new components, `UiSpecsList` and `UiSpecsDetail`, to display UI specifications for debugging purposes. The `UiSpecsList` component fetches and displays a list of available UI specs, while the `UiSpecsDetail` component provides detailed information for a selected spec. Additionally, routes for these components were added to the `feature-pack.yaml`, enabling access at `/admin/debug/ui-specs` and `/admin/debug/ui-specs/[entityKey]`. This enhancement improves the debugging process by allowing system administrators to easily view and navigate through UI specifications.

Updated the following files:
- `src/pages/UiSpecsList.tsx`
- `src/pages/UiSpecsDetail.tsx`
- `feature-pack.yaml`
- `dist` directory including new type definitions and JavaScript files for the components.

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -21,6 +21,16 @@ routes:
     roles: []
     default_roles_allow: [admin]
     authz: { entity: debug, verb: read }
+  - path: /admin/debug/ui-specs
+    page: UiSpecsList
+    roles: []
+    default_roles_allow: [admin]
+    authz: { entity: debug, verb: read }
+  - path: /admin/debug/ui-specs/[entityKey]
+    page: UiSpecsDetail
+    roles: []
+    default_roles_allow: [admin]
+    authz: { entity: debug, verb: read }
 
 # ─────────────────────────────────────────────────────────────────────────────
 # NAV - Navigation entries
@@ -53,6 +63,13 @@ nav:
         path: /admin/debug/dashboard-state
         icon: LayoutDashboard
         weight: 30
+        roles: [admin]
+        showWhen: authenticated
+      - id: debug-ui-specs
+        label: UI Specs
+        path: /admin/debug/ui-specs
+        icon: Table
+        weight: 40
         roles: [admin]
         showWhen: authenticated
 
