feat: refactor UiSpecsDetail and UiSpecsList for fields mapping
Refactored the `UiSpecsDetail` and `UiSpecsList` components to use a canonical mapping for fields instead of form fields. The `formFieldsRows` has been renamed to `fieldsRows`, and similar changes have been made to the handling of columns and entity properties. This unification streamlines the data handling process, improving clarity and consistency across the UI. Updated YAML configuration to reflect these changes, ensuring that entity specifications are correctly aligned with the new structure.

Files updated include:
- `src/pages/UiSpecsDetail.tsx`
- `src/pages/UiSpecsList.tsx`
- `ui/entities/debug.uiSpec.yaml`

These changes enhance maintainability and ensure that the data displayed in the UI is consistent with the entity definitions.

--- a/ui/entities/debug.uiSpec.yaml
+++ b/ui/entities/debug.uiSpec.yaml
@@ -29,13 +29,13 @@ entities:
         - tableId
         - drizzleTable
         - listColumnCount
-        - formFieldCount
+        - fieldCount
       initialColumnVisibility:
         entityKey: true
         tableId: true
         drizzleTable: true
         listColumnCount: true
-        formFieldCount: true
+        fieldCount: true
       initialSorting:
         - id: entityKey
           desc: false
@@ -56,8 +56,8 @@ entities:
           label: "# list cols"
           sortable: true
           filterType: number
-        - key: formFieldCount
-          label: "# form fields"
+        - key: fieldCount
+          label: "# fields"
           sortable: true
           filterType: number
 
@@ -88,8 +88,8 @@ entities:
             sortable: false
             filterType: string
 
-      formFields:
-        tableId: debug.uiSpecs.formFields
+      fields:
+        tableId: debug.uiSpecs.fields
         mobileColumnKeys: [key, label]
         columns:
           - key: key
