chore: update version and enhance debug UI specifications
Updated the package version in package.json from 1.0.8 to 1.0.9 to reflect recent changes. Additionally, modified the debug.uiSpec.yaml file to include a set of new canonical fields that are derived from the /hit-ui-specs.json. These virtual fields provide better insight into the structure of entities, including counts for lists, fields, form sections, relations, header actions, and detail extras. This enhancement improves the debug utilities for system administrators by offering more comprehensive data management capabilities.

--- a/ui/entities/debug.uiSpec.yaml
+++ b/ui/entities/debug.uiSpec.yaml
@@ -85,6 +85,18 @@ entities:
           sortable: true
           filterType: number
 
+    # Canonical fields map (virtual entity; all fields are derived from /hit-ui-specs.json).
+    fields:
+      entityKey: { type: text, label: Entity, virtual: true }
+      tableId: { type: text, label: tableId, virtual: true }
+      drizzleTable: { type: text, label: drizzleTable, virtual: true }
+      listColumnCount: { type: number, label: "# list cols", virtual: true }
+      fieldCount: { type: number, label: "# fields", virtual: true }
+      formSectionCount: { type: number, label: "# form sections", virtual: true }
+      relationCount: { type: number, label: "# relations", virtual: true }
+      headerActionCount: { type: number, label: "# header actions", virtual: true }
+      detailExtrasCount: { type: number, label: "# detail extras", virtual: true }
+
     detail:
       # Sub-tables for the detail view
       metaRoutes:
