--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hit/feature-pack-debug-core",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Debug utilities for system administrators",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -39,7 +39,11 @@
     "dev": "tsc --watch",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {
+    "@hit/feature-pack-auth-core": "file:../hit-feature-pack-auth-core"
+  },
   "peerDependencies": {
+    "@hit/feature-pack-auth-core": "*",
     "@hit/ui-kit": "*",
     "lucide-react": "^0.460.0",
     "react": "^18.0.0"
