refactor: move debug UI specs and permissions to schema files
Removed the debug UI specs and permissions definitions from `feature-pack.yaml` and moved them into dedicated schema files: `schema/entities/debug.uiSpec.yaml` and `schema/permissions.yaml`. This restructuring improves the organization of schema-related definitions, making it easier to manage and maintain them independently. The change helps streamline the permissions setup for debug utilities and ensures a clearer separation of concerns in the codebase.

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -94,63 +94,5 @@ api:
 # ─────────────────────────────────────────────────────────────────────────────
 # PERMISSIONS - Action definitions (for admin-core permissions UI + runtime checks)
 # ─────────────────────────────────────────────────────────────────────────────
-permissions:
-  actions:
-    # Debug pages with explicit access toggles.
-    - key: debug-core.server-stats.access
-      label: "Debug: Server Stats"
-      description: "Access debug server statistics."
-      default_enabled: false
-    - key: debug-core.db-stats.access
-      label: "Debug: DB Stats"
-      description: "Access debug database statistics."
-      default_enabled: false
-    - key: debug-core.dashboard-state.access
-      label: "Debug: Dashboard State"
-      description: "Access debug dashboard state."
-      default_enabled: false
-    - key: debug-core.ui-specs.access
-      label: "Debug: UI Specs"
-      description: "Access debug UI specs list."
-      default_enabled: false
-    - key: debug-core.ui-specs.detail.access
-      label: "Debug: UI Specs Detail"
-      description: "Access debug UI specs detail pages."
-      default_enabled: false
-
-    # Scope Policy Tree: debug-core (global) -> entity overrides.
-    #
-    # Scope modes:
-    # - none: deny all access for this verb/entity (hide pages + block APIs)
-    # - all: ignore scope (read everything)
-    # - own: only owned records (not applicable for debug - debug info doesn't have ownership)
-    # - ldd: owner OR matching L/D/D (not applicable for debug - debug info doesn't have LDD fields)
-    #
-    # These are mutually exclusive per node; the Security Groups UI renders them as dropdowns.
-    # Note: Debug utilities are admin-only and don't have ownership or LDD fields, so only 'all' mode is meaningful.
-    - key: debug-core.read.scope.none
-      label: "Debug Core Read Scope = None"
-      description: "Deny all debug read access."
-      default_enabled: false
-    - key: debug-core.read.scope.all
-      label: "Debug Core Read Scope = All"
-      description: "Read all debug information regardless of scope."
-      default_enabled: false
-    - key: debug-core.read.scope.own
-      label: "Debug Core Read Scope = Own"
-      description: "Read only debug info you own (not applicable - debug info doesn't have ownership fields)."
-      default_enabled: false
-
-    # Debug override (optional): if set, overrides debug-core.read.scope.* for debug only.
-    - key: debug-core.debug.read.scope.none
-      label: "Debug Core Debug Read Scope = None"
-      description: "Deny all debug information read access."
-      default_enabled: false
-    - key: debug-core.debug.read.scope.all
-      label: "Debug Core Debug Read Scope = All"
-      description: "Read debug information regardless of scope."
-      default_enabled: false
-    - key: debug-core.debug.read.scope.own
-      label: "Debug Core Debug Read Scope = Own"
-      description: "Read only debug info you own (not applicable - debug info doesn't have ownership fields)."
-      default_enabled: false
+# Permissions are schema-driven and live under:
+#   schema/permissions.yaml
